# KetchupMod

./: Cargo.toml  README.md
.github/workflows/: rust.yml  rust_build.yml
romfs/: RunForAllScripts.bat  fighter_common_common_edits.lua  fighter_common_fighter_param_edits.lua  fighter_common_fighter_param_motion_edits.lua
romfs/KetchupModRomfs/fighter/bayonetta/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/brave/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/buddy/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/captain/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/chrom/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/cloud/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/common/param/: common.prc  fighter_param.prc  fighter_param_motion.prc
romfs/KetchupModRomfs/fighter/daisy/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/dedede/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/diddy/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/dolly/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/donkey/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/duckhunt/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/edge/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/elight/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/falco/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/fox/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/gamewatch/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/ganon/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/gaogaen/motion/body/c00/: a02turndash.nuanmb
romfs/KetchupModRomfs/fighter/gekkouga/motion/body/c00/: a02turndash.nuanmb
src/: airdodge.rs  ecbs.rs  edge_slipoffs.rs  get_command_flag_cat.rs  get_param.rs  init_settings.rs  jumpsquat.rs  lib.rs  momentum_transfer.rs  momentum_transfer_line.rs  moveset_utils.rs  status_script_hooks.rs  sys_line.rs  utils.rs
src/vars/: custom_var_resets.rs  custom_vars.rs  mod.rs
(+51 files in other folders)
