[package]
name = "KetchupMod"
version = "0.0.6"
authors = ["Bruh <your@mom.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libnro_hook.nro", url = "https://github.com/ultimate-research/nro-hook-plugin/releases/download/v0.1.1/libnro_hook.nro" },
    { name = "libacmd_hook.nro", url = "https://github.com/ultimate-research/acmd_hook/releases/download/master/libacmd_hook.nro" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }
skyline-update = { git = "https://github.com/skyline-rs/skyline-update" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
