[package]
name = "KetchupMod"
version = "0.0.8"
authors = ["Bruh <your@mom.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libnro_hook.nro", url = "https://github.com/ultimate-research/nro-hook-plugin/releases/download/v0.1.1/libnro_hook.nro" },
    { name = "smashline_hook.nro", url = "https://github.com/blu-dev/smashline_hook/releases/download/1.1.1/libsmashline_hook.nro" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
skyline-update = { git = "https://github.com/FaultyPine/skyline-update-hacky-directory-support" }
hdr-modules = { git = "https://github.com/blu-dev/hdr-modules" }
hdr-core = { git = "https://github.com/jobrien97/hdr-core", features = ["debug"] }
interpolation = "0.2.0" # for f32::lerp

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
